# complex_paint

./: .gitignore  CMakeLists.txt  image_transformer.h  widget.h
view/: CMakeLists.txt  active_widget.cpp  active_widget.h  image_transformer.cpp  image_transformer.h  main.cpp  my_active_widget.cpp  my_active_widget.h  my_widget.cpp  my_widget.h  widget.cpp
